css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
    padding: 0;
    margin: 0;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}


body {
    display: flex;
    justify-content: center;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 30px;
    justify-content: center;
    align-items: center;
}

a {
    color: inherit;
    text-decoration: none;
}
main{
    display: flex;
    flex-direction: column;
    gap: 35px;
}



/****** Header ***********/
header {
    display: flex;
    height: 79px;
    justify-content: space-between;
}

#booki-logo {
    width: 61.09px;
    height: 19px;
    padding: 30px 50px 30px 0;
}

.menu ul {
    display: flex;
    gap: 68px;
    list-style: none;
}

.menu ul li {
    padding-top: 15px;
    position: relative;
}

.menu ul li:hover::before {
    content: "";
    width: 100%;
    height: 2px;
    background-color: var(--main-color);
    position: absolute;
    top: 0;
    left: 0;
}

/****** Hero Section ***********/
.hero {
    display: flex;
    flex-direction: column;
    gap: 35px;
}
.description{
    display: flex;
    flex-direction: column;
    gap: 8px;
}
.description h1 {
    font-size: 22px;
}

.description p {
    font-size: 16px;
}

.recherche {
    display: flex;
    border-radius: 15px;
    border: 1px solid var(--main-bg-color);
    gap: 24px;
    height: 49px;
}
.map-svg {
    width: 50px;
    height: 50px;
    background-color: var(--main-bg-color);
    display: flex;
    justify-content: center;
    align-items: center;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    border: 1px solid var(--main-bg-color);
}
.recherche input {
    border: none;
}

.recherche input::placeholder {
    color: black;
    font-size: 18px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.recherche form{
    display: flex;
}

.recherche button {
    background: var(--main-color);
    color: white;
    font-size: 18px;
    font-weight: bold;
    border: none;
    padding: 15px 16px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}
.recherche .search-icon {
    display: none;
}



.filtres {
    display: flex;
    align-items: center;
    gap: 15px;
}

.filtres h2 {
    font-size: 18px;
}

.filtres button {
    display: flex;
    align-items: center;
    gap: 10px;
    background: none;
    border: 2px solid #D9D9D9;
    border-radius: 25px;
    padding: 4px 19px;
    font-size: 16px;
    font-weight: bold;
    cursor: pointer;
    height: 50px;
}

.filtres button:hover {
    background-color: var(--filter-bg-color);
}

.infos-supplementaires {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 16px;
}
.fa-solid {
    color: var(--main-color);

}
.fa-fire,.fa-heart,.fa-person,.fa-money-bill-wave{
    font-size: 22px;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    gap: 40px
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 15px;
    padding: 30px;
    gap: 30px;
}
.section-title {
    font-size: 22px;
}
.card img {
    object-fit: cover;
}

.card-title{
    font-size: 16px;
}
.card-subtitle{
    font-size: 14px;
}
.euro {
    font-weight: 700;
}
.card-rating{
    margin:0;
    padding:0;
}
.neutral-star {
    color: var(--main-bg-color)
}

/****** Hebergements ***********/
.hebergements {
    display: flex;
    width: 65%;
    flex-direction: column;
    border-radius: 15px;
}

.hebergements-cards {
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
}

.hebergements-cards a {
    display: flex;
    flex-direction: column;
    width: calc(33.333% - 20px);
    border-radius: 20px;
    padding-bottom: 15px;
    gap: 4px;
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
    background-color: white;

}
.hebergements-cards .image-container {
    border: 5px solid white;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    overflow: hidden;
}
.hebergements-cards img {
    width: 100%;
    height: 120px;

}

.hebergements-cards .card-content {
    padding: 0 15px;
    display: flex;
    flex-direction: column;
    gap: 8px
}
.hebergements-cards .card-txt{
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.see-more{
    font-size: 18px;
    font-weight: bold;
    list-style: none;
    color: black;
    
}

/****** Populaires ***********/
.populaires {
    width: 30%;
    display: flex;
    flex-direction: column;

}
.populaires-cards{
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.populaires-cards a {
    display: flex;
    width: 100%;
    height: 136px;
    border-radius: 20px;
    overflow: hidden;
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
    background-color: white; 
    text-decoration: none;
}

.populaires-cards .card {
    display: flex;
    width: 100%;
}

.populaires-cards .image-container {
    width: 33%;
    height: 100%;
    border: 5px solid white;
    border-right: none;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    overflow: hidden;
    box-sizing: border-box;
}

.populaires-cards .image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}
.populaires-cards .card-content{
    display: flex;
    flex-direction: column;
    padding: 10px 5px 5px 15px;
    gap:24px;
    justify-content: space-between;

}
.populaires-cards .card-txt{
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.populaires-cards .card-subtitle {
    font-size: 14px;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/****** Activites ***********/
.activites {
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding: 30px;
}


.activites-cards {
    display: flex;
    gap: 30px;
}

.activites-cards a {
    width: 25%;
    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
    border-radius: 20px;
}
.activites-cards .card{
    padding: 0;
}
.activites-cards img {
    width: 100%;
    height: 380px;
    border-radius: 20px 20px 0 0;
    display:flex;
    gap: 10px;
}

.activites-cards .card-content {
    padding: 20px 19px;
}

/****** Footer ***********/
footer {
    display: flex;
    background-color: var(--main-bg-color);
    padding: 20px;
}

footer section {
    width: 33%;
    padding:20px;
    display: flex;
    flex-direction: column;
    gap:15px
}


/****** Media queries ***********/
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
        gap:50px;
    }

    .hebergements {
        width: calc(100% - 60px);
    }

    .populaires {
        width: calc(100% - 60px);
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
    .activites-cards img{
        height: 200px;
    }


}

@media (max-width: 767.98px) {
    .main-container {
        padding: 0;
        display:flex;
        flex-direction: column;
        gap: 30px;
    }

    header {
        flex-direction: column;
        height: auto;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    #booki-logo{
        padding:30px 50px 30px 50px;
    }
    .menu{
        display: flex;
        width: 100%;
    }
    .menu ul {
        width: 100%;
        gap:15px;
        display: flex;
        justify-content: space-around;
        position: relative;
    }
    .menu ul a{
        width: 50%;
    }
    .menu ul li {
        padding-bottom: 15px;
        display: flex;
        justify-content: center;
    }
    .menu ul li:hover::before{
        display: none;
    }

    .menu ul li:hover::after {
        content: "";
        width: 100%;
        height: 2px;
        background-color: var(--main-color);
        position: absolute;
        bottom: 0;
        left: 0;
    }
    .hero{
        padding:0 20px;
    }
    .recherche {
        width: 100%;
    }

    .recherche input {
        width: auto;
        flex-grow: 1;
    }
    .recherche .search-icon{
        display: block;
    }
    .recherche .search-text{
        display: none;
    }
    .recherche button{
        padding: 0;
        border-radius: 15px;
    }

    .filtres {
        flex-wrap: wrap; 
        gap: 10px;
    }
    
    .filtres h2 {
        width: 100%; 
    }
    
    .filtres button {
        width: calc(50% - 10px);
        box-sizing: border-box; 
        justify-content: center; 
    }

    .populaires{
        order: 1;
    }
    .hebergements{
        order: 2;
    }
    .hebergements-and-populaires .hebergements{
        background-color: white;
    }
    .hebergements-cards a,
    .populaires-cards a,
    .activites-cards a {
        width: 100%;
    }
    .activites-cards img{
        height: 140px;
    }
    .populaires-cards {
        flex-direction: column;
    }
    .activites-cards{
        flex-direction: column;
    }

    footer {
        flex-direction: column;
    }

    footer section {
        width: 100%;
        margin-bottom: 30px;
    }
}

